Renamed static to public, created static-demo subdirectory, added pyc to gitignore.

--- a/hacksc-todolist/app.yaml
+++ b/hacksc-todolist/app.yaml
@@ -6,11 +6,11 @@ threadsafe: yes
 
 handlers:
 - url: /favicon\.ico
-  static_files: /static/favicon.ico
+  public_files: /public/favicon.ico
   upload: favicon\.ico
 
-- url: /static
-  static_dir: static
+- url: /public
+  public_dir: public
 
 - url: .*
   script: main.app
